[package]
name = "snippy-rs"
version = "1.0.0"
edition = "2021"
description = "A simple cross-platform CLI tool to manage user-defined snippets. Snippets are loaded and unloaded through the clipboard."
authors = ["Nicolas Chagnet <nchagnet@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"

[[bin]]
name = "snippy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
arboard = "3.3.1"
clap = { version = "4.5.0", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
directories = "5.0.1"
humphrey_json = "0.2.2"
jasondb = "0.2.7"
uuid = { version = "1.7.0", features = ["v7"] }
